--- a/index.html
+++ b/index.html
@@ -45,6 +45,110 @@
             <h2 class="title-desc">world top grade</h2>
             <div class="top-grade-container"></div>
         </div>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-form">
+                    <section>
+                        <ul>
+                            <li>
+                                <i class="fa-solid fa-mobile-phone"></i>
+                                <span>phone :</span> +1 (504) 446-0757
+                            </li>
+                            <li>
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>address :</span> 30 north west new
+                            </li>
+                        </ul>
+                    </section>
+                    <section>
+                        <form>
+                            <input type="email" name="email" id="input-email" placeholder="Enter your email"/>
+                        </form>
+                        <a href="#">
+                            <span>subscribe</span>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-telegram-plane"></i>
+                        </a>
+                    </section>
+                </div>
+                <div class="footer-info">
+                    <section>
+                        <div class="logo-image">
+                            <img src="./images/logo.png" alt="logo"/>
+                        </div>
+                        <p>
+                            the coffee is brewed by first roasting the green coffe beans over
+                            hotcoals in a brazier. given an opportunity to sample.
+                        </p>
+                    </section>
+                    <section>
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-google-plus"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+        </footer>
+        <div class="footer-links">
+            <div class="footer-links-container">
+                <ul>
+                    <li>
+                        <a href="#">home</a>
+                    </li>
+                    <li>
+                        <a href="#">about</a>
+                    </li>
+                    <li>
+                        <a href="#">menu</a>
+                    </li>
+                    <li>
+                        <a href="#">reservation</a>
+                    </li>
+                    <li>
+                        <a href="#">pages</a>
+                    </li>
+                    <li>
+                        <a href="#">shop</a>
+                    </li>
+                    <li>
+                        <a href="#">blog</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#">
+                            go top
+                            <i class="fa-solid fa-arrow-up"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <script src="./app.js"></script>
     </body>
 </html>
